# kafka_dashboard_exchange_rates

./: README.md  pyproject.toml
exchange_rate/consumer/: consumer.py
exchange_rate/producer/: producer.py
exchange_rate/streamlit_dash/: dashboard.py
exchange_rate_docker/: docker-compose.yaml
exchange_rate_docker/consumer/: consumer.py
exchange_rate_docker/dashboard/: dashboard.py
exchange_rate_docker/producer/: Dockerfile  producer.py
